# AIgenda

./: .gitignore  LICENSE  pyproject.toml
data/: tareas.db
src/: main.py  main_prueba.py
src/chatbot/: agent_agenda.py
src/chatbot/prompts/: database_prompt.txt  dateParser_prompt.txt  translator_prompt.txt
src/database/: models.py  operations.py  schema.py  test_database.py  test_schemas.py
src/utils/: __init__.py  logger.py
test/: __init__.py  conftest.py  test_delete_operations.py  test_get_operations.py  test_get_tasks_for_today.py  test_get_upcoming_tasks.py  test_operations.py
