[project]
name = "aigenda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "gradio>=5.32.0",
    "loguru>=0.7.3",
    "openai>=1.82.1",
    "openai-agents>=0.0.16",
    "pydantic>=2.11.5",
    "pytest>=8.3.5",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.12",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "pytest-cov>=6.1.1",
]
